vaultwarden/vaultwarden-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  serviceName: vaultwarden
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /data
              name: config
          securityContext:
            runAsUser: 1004
            runAsGroup: 100
      volumes:
        - name: config
          nfs:
            path: /export/Kubernetes/vaultwarden
            server: 192.168.86.107
