vaultwarden/vaultwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: password-manager
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: password-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
