vaultwarden/vaultwarden-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.albinmedoc.se`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
